# ytmusic

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: ytmusic.rb
src/: api.rs  app.rs  cache.rs  config.rs  input.rs  main.rs  player.rs  storage.rs
src/ui/: mod.rs  theme.rs
